Avoid using 0px, because minifiers might convert the value to 0, which will still cause issues on IE.

--- a/services/web/public/stylesheets/app/editor/review-panel.less
+++ b/services/web/public/stylesheets/app/editor/review-panel.less
@@ -338,7 +338,7 @@
 			margin-left: 5px;
 			// We need to set any low-enough flex base size (0px), making it growable (1) and non-shrinkable (0).
 			// This is needed to ensure that IE makes the element fill the available space. 
-			flex: 1 0 0px; 
+			flex: 1 0 1px; 
 
 			.rp-state-overview & {
 				margin-left: 0;
